...
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/posts_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.v4.widget.SwipeRefreshLayout>

...
